fix: Correção getFirst para get(0)